Revision History
================

0.48 - 2007/04/04:

- This version now builds with PDCurses 3.0, and if using PDCurses, will
  no longer build with an earlier version. This gives us mouse support
  for DOS and OS/2, and better idling in the XT version, among other
  improvements.

- The FAQ and TODO files were outdated, and not very useful.

- Removed the makefiles for EMX and Borland C++ for Windows. These
  compilers are basically dead. I also removed Makefile.wid -- full-
  fledged wide-character support will be coming in the future, but for
  now, this file was just more clutter.

0.47 - 2005/12/31:

New features:

- Added support for Microsoft Visual C++, MinGW, and Open Watcom. I highly
  recommend Watcom, and I'm now using it for the OS/2 port. I'd use it for
  the Win32 port, but sadly the directory scan (used in the packet list)
  is using the slow POSIX-emulation method rather the fast native method,
  and I haven't got that sorted out yet. MinGW is also very nice, and I'd
  use that, except that it needs MSVCRT.DLL, which doesn't come with old
  Windows 95. So -- rather than continuing with the 5-year-old Borland 5.5
  (although it still works) -- I'm delivering an MSVC-built version. This
  version doesn't support set_new_handler(), but no one is likely to
  notice (famous last words). Also, I've finally dropped the pretense of
  supporting RSX/NT.

- The starting directory and home directory are now added to the PATH
  searched for archivers and editors, so you can include them in the same
  directory with mm.exe. I'm taking advantage of this to bundle InfoZip's
  zip and unzip, hugely bloating the Windows zip, but hopefully stopping
  the complaints I get from people who can't figure out how to set up
  archiving themselves.

- Support for the "GreekQWK" variant, which uses 0x0C instead of 0xE3 as
  the line delimiter. Reported by Dimitris Mandalidis. Note that there's
  still no particular support for the Greek _character set_, but you can