@@ -617,9 +617,13 @@ your .mmailrc and ColorFile with any new keywords. (Old keywords, and the
 values you've set for them, are preserved. However, comments are lost.)
 Some notes on specific upgrades:
 
-Version 0.45 adds the .mmailrc option "TempDir". Note that temporary
-files are handled differently in this version, and the TEMP and TMP
-environment variables are ignored. "homeDir" has been removed.
+Version 0.48 adds the .mmailrc option "Mouse", which allows you to 
+enable or disable mouse input (for instance, if you don't want to see 
+the mouse cursor).
+
+Version 0.45 adds "TempDir". Note that temporary files are handled 
+differently in this version, and the TEMP and TMP environment variables 
+are ignored. "homeDir" has been removed.
 
 Version 0.43 adds "ClockMode", and makes "UseColors" available in all
 ports. Also note that CPU usage while idle may be higher in some
